1.0.0
Added message to traymenu when selecting menu item, ( use --timeout=NNN, where NNN is timout in mS, 0=no message ). 
Added type=help for builtin help dialog.
Tray menu icons can be either symbolic name or full path.
Added tramenu examples.
Added --type=traymenu.
Yadqt with no args now displays about box for yadqt.
Default is now qt6 ( use qt5 with --enable-qt5 to configure for qt5 build ).

0.1.1
Set buttons in prefs dialog via the --buttons switch, defaults to OK.
Changed buttons in prefs dialog to "Apply, Ok, Cancel" to allow live update of prefs ( see example bashprefslive.sh.
Added spin buttons to pref dialog.
Added tabbed prefs dialog.
Auto set window title in notebook/richtext/textfile if not specified on cli.
More sensible default sizes for dialogs if width/height not set on cli.
Prefsdialog type size can be overridden by setting both --width AND --height.
Updated README.
Added examples.
Added prefsdialog to types.
Code clean.
Added openfile/savefile types.
Added 'Home' to richtext viewer.
Update to README.
Added 'Refresh' button to richtext viewer.
Added extra info to --help.
Fixed quiting app when closing tailbox via window control etc.
Added type richtext.
Added type notepad.
Added type tailbox.
Code clean.
Standardised outputs.

0.1.0
Ignore button now returns 1.
Code clean.
Added --buttons option for most dialogs ( excluding input, getitem, colour and font ).
Updated manpage.
Code clean.
Changed type "what to "query" 
Added type "text".
Changed type "gettext to "input" 
Added font dialog.
Added "--ipseparator" to options ( for default text ).
Added "--fromstdin" to options to set default data from stdin.

0.0.7
Standardised options.
More docs.
Tided up class inits.
Display results of colour chooser from desktopfile.
Added a desktop file for the colour chooser.
Auto detect whether to include alpha channel in colour dialog based on start colour.
Added colour dialog.
Better defaults for those dialogs that support size ( list/text/image ).