@@ -8,5 +8,3 @@ Open /usr
 folder
 xdg-open /usr
 
-
-
