@@ -48,6 +48,7 @@ class DataClass
 		int								timeOut=0;
 		bool								dataFromStdIn=false;
 		bool								allowRestart=false;
+		QString							runThisfirst="ARG";
 
 		void								setDButtons(void);
 		void								getBoxType(void);
