@@ -61,7 +61,8 @@ int main(int argc, char **argv)
 			{"buttons","Buttons ( for info boxes ).","Ok"},
 			{"icon","Icon to use for tray menu.",data.theIcon},
 			{"timeout","Timeout to use for tray menu message in mS( 0=no message ).","0"},
-			{"allowrestart","Add 'Restart' item to tray menu."},
+			{"allowreload","Add 'Reload' item to tray menu."},
+			{"runfirst","Run application  ARG before starting/reloading traymenu.",data.runThisfirst},
 			{"type","Box Type ( no type will display aboutbox for Qt )\n\nTypes are:\nabout aboutqt query info warn fatal input getitem form list textfile imagefile colour font text tailbox notepad richtext openfile savefile prefsdialog tabbedprefsdialog traymenu help.\nMore info and examples here:\nhttps://keithdhedger.github.io/pages/yadqt/yadqt.html","aboutqt"},
 	});
 
@@ -71,21 +72,26 @@ int main(int argc, char **argv)
 	if(data.parser.isSet("title")==true)
 		data.title=data.parser.value("title");
 
-	if(data.parser.isSet("allowrestart")==true)
+	if(data.parser.isSet("allowreload")==true)
 		data.allowRestart=true;
 
 	if(data.parser.isSet("fromstdin")==true)
 		{
 			data.dataFromStdIn=true;
 			QTextStream	datastream(stdin);
-    			QString		datain = datastream.readAll();
-    			datain=LFSTK_UtilityClass::LFSTK_strStrip(datain.toStdString()).c_str();
+    			QString		datain=datastream.readAll().trimmed();
     			data.defaultText=datain;
 		}
 	else
 		{
-			data.defaultText=data.parser.value("default");
+			if(data.parser.isSet("default")==true)
+				data.defaultText=data.parser.value("default");
+			else if(data.parser.isSet("data")==true)
+				data.defaultText=data.parser.value("data");
 		}
+
+	if(data.parser.isSet("runfirst")==true)
+		data.runThisfirst=data.parser.value("runfirst");
 
 	if(data.parser.isSet("body")==true)
 		data.body=data.parser.value("body");
